@@ -37,10 +37,8 @@ xkbevd_SOURCES =	\
 appman_SOURCES = \
         xkbevd.man
 
-BUILT_SOURCES = cfgparse.c cfgparse.h
-CLEANFILES = $(BUILT_SOURCES)
-
-cfgparse.h: cfgparse.c
+BUILT_SOURCES = cfgparse.c
+MAINTAINERCLEANFILES = $(BUILT_SOURCES)
 
 # Sample configuration file
 EXTRA_DIST = example.cf
@@ -50,7 +48,7 @@ appmandir =  $(mandir)/man$(APP_MAN_SUFFIX)
 appman_DATA = $(appman_SOURCES:man=$(APP_MAN_SUFFIX))
 
 EXTRA_DIST += $(appman_SOURCES)
-CLEANFILES += $(appman_DATA)
+CLEANFILES = $(appman_DATA)
 
 SED = sed
 
